# time-biller

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  run.sh
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  time_math.py
backend/app/routers/: clients.py  dashboard.py  invoices.py  projects.py  settings.py  time_entries.py
backend/app/services/: invoicing.py  pdf.py
backend/app/templates/: invoice.html
backend/tests/: conftest.py  test_clients.py  test_dashboard.py  test_health.py  test_invoice_status.py  test_invoicing.py  test_models.py  test_pdf.py  test_projects.py  test_settings.py  test_time_entries.py  test_time_math.py
desktop/: launcher.py  tray.py  tray_api.py
docs/superpowers/plans/: 2026-07-06-time-biller.md
docs/superpowers/specs/: 2026-07-06-time-biller-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  icons.tsx  main.tsx  router.tsx  styles.css  types.ts
frontend/src/__tests__/: InvoiceBuilder.test.tsx  Timer.test.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useElapsed.ts
frontend/src/pages/: Clients.tsx  Dashboard.tsx  InvoiceDetail.tsx  Invoices.tsx  Projects.tsx  Settings.tsx  TimeEntries.tsx  Timer.tsx
