[project]
name = "time-biller"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "weasyprint>=62",
  "python-multipart>=0.0.9",
  "pywebview>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
